--- a/public/style.css
+++ b/public/style.css
@@ -1,23 +1,93 @@
 * {
     box-sizing: border-box;
+    font-family: Cochin, Georgia, Times, "Times New Roman", serif;
 }
-
+h1 {
+    font-weight: 1;
+    color: white;
+}
 body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background: linear-gradient(
+        0.25turn,
+        rgb(161, 221, 230),
+        rgba(88, 178, 234, 0.333),
+        rgba(114, 114, 224, 0.354)
+    );
+}
+p {
+    text-align: center;
+    color: rgb(23, 30, 106);
+    margin-top: 10px;
+    margin-bottom: 0;
+}
+.note {
+    margin-top: 0;
+    margin-bottom: 20;
+    font-weight: 1;
+    font-size: 8px;
 }
 
 form {
-    padding: 20px;
+    background: linear-gradient(
+        rgb(255, 255, 255),
+        rgb(144, 208, 248),
+        rgb(176, 161, 230)
+    );
+
     display: flex;
     flex-direction: column;
-}
-#cc {
+    border-radius: 50%;
+    align-items: center;
+    justify-items: center;
+    overflow: hidden;
+    box-shadow: 0px 0px 30px 2px rgb(255, 255, 255);
 }
 
 canvas {
-    width: 300px;
-    height: 100px;
-    border: 2px solid black;
+    margin: 5px;
+    border: 1px dotted rgb(255, 255, 255);
+    background-color: rgb(255, 255, 255);
+    border-radius: 50%;
+    box-shadow: 0px 0px 30px 2px rgb(255, 255, 255);
+}
+
+input {
+    text-align: center;
+    width: 40%;
+    height: 20%;
+    border-radius: 50%;
+    border: none;
+    transition: all;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 0px 10px 1px rgb(255, 255, 255);
+}
+
+.inpCout {
+    width: 100%;
+    height: 40px;
+}
+
+.title {
+    background: linear-gradient(
+        rgb(255, 255, 255),
+        rgb(88, 178, 234),
+        rgb(196, 187, 254)
+    );
+    border-radius: 50%;
+    padding: 10px;
+    box-shadow: 0px 0px 20px 1px rgb(255, 255, 255);
+}
+label {
+    color: rgb(23, 30, 106);
+}
+button {
+    background: linear-gradient(rgb(255, 255, 255), rgb(176, 161, 230));
+    border: none;
+    border-radius: 50%;
+    padding: 5px;
+    color: rgb(19, 62, 100);
+    margin-bottom: 5px;
 }
