--- a/views/thanks.handlebars
+++ b/views/thanks.handlebars
@@ -5,3 +5,9 @@
     people have signed this petition alreayd, click
     <a href="./signers">here</a>
     to view the full list</p>
+
+<div class="bubble"></div>
+<div class="bubble"></div>
+<div class="bubble"></div>
+<div class="bubble"></div>
+<div class="bubble"></div>
