--- a/public/style.css
+++ b/public/style.css
@@ -24,25 +24,23 @@ p {
     margin-bottom: 0;
 }
 .note {
-    margin-top: 0;
-    margin-bottom: 20;
-    font-weight: 1;
-    font-size: 8px;
+    margin-top: 20;
+    font-weight: 2;
+    font-size: 9px;
 }
 
 form {
     background: linear-gradient(
         rgb(255, 255, 255),
-        rgb(144, 208, 248),
-        rgb(176, 161, 230)
+        rgba(144, 224, 248, 0),
+        rgba(24, 3, 102, 0.251)
     );
-
     display: flex;
     flex-direction: column;
     border-radius: 50%;
     align-items: center;
-    justify-items: center;
     overflow: hidden;
+
     box-shadow: 0px 0px 30px 2px rgb(255, 255, 255);
 }
 
@@ -60,34 +58,60 @@ input {
     height: 20%;
     border-radius: 50%;
     border: none;
-    transition: all;
-    background-color: rgb(255, 255, 255);
+    margin: 10px;
+    background-color: white;
     box-shadow: 0px 0px 10px 1px rgb(255, 255, 255);
+    transition: all 500ms;
+}
+
+input:focus,
+textarea:focus {
+    outline: none;
 }
 
 .inpCout {
     width: 100%;
     height: 40px;
+    margin: 0;
 }
 
 .title {
-    background: linear-gradient(
-        rgb(255, 255, 255),
-        rgb(88, 178, 234),
-        rgb(196, 187, 254)
-    );
     border-radius: 50%;
     padding: 10px;
     box-shadow: 0px 0px 20px 1px rgb(255, 255, 255);
 }
 label {
+    margin-top: 20px;
     color: rgb(23, 30, 106);
 }
 button {
-    background: linear-gradient(rgb(255, 255, 255), rgb(176, 161, 230));
+    margin-top: 20px;
+    background-color: transparent;
+    /* background: linear-gradient(rgb(255, 255, 255), rgb(161, 182, 230)); */
     border: none;
     border-radius: 50%;
     padding: 5px;
     color: rgb(19, 62, 100);
     margin-bottom: 5px;
+    cursor: pointer;
+}
+.button {
+    text-align: center;
+    margin-top: 20px;
+    border: none;
+    border-radius: 50%;
+    padding: 5px;
+    color: rgb(19, 62, 100);
+    margin-bottom: 5px;
+    font-size: 12;
+}
+
+a:link {
+    text-decoration: none;
+}
+
+.buttons {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
 }
