--- a/views/data.handlebars
+++ b/views/data.handlebars
@@ -5,9 +5,7 @@
 <div class="system">
 
     <form method="POST" style="align-content:space-around">
-        <input name="name" placeholder="name" />
-        <input name="surname" placeholder="surname" />
-        <input name="age" placeholder="age" />
+        <input name="age" placeholder="age" id="age" />
         <input name="city" placeholder="city" />
         <div class="countries"><input
                 class="inpCout"
@@ -18,10 +16,11 @@
             />
             <div id="results"></div>
         </div>
-        <input name="link" placeholder="website" />
+        <input name="website" placeholder="website" value="http://" />
         <button type="submit">sign petition</button>
 
     </form>
     <div class="title"><h1 class="header">animate</h1></div>
 
 </div>
+<div id="exists"></div>
