--- a/public/data.css
+++ b/public/data.css
@@ -55,3 +55,14 @@ a:link {
 a {
     font-size: 12px;
 }
+.field {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#exists {
+    text-align: center;
+    box-shadow: 0px 0px 20px 1px rgb(255, 255, 255);
+    border-radius: 20px;
+    padding: 10px;
+}
