--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -1,44 +1,59 @@
 <h1>Update your personal informations</h1>
 
-<form method="post">
-    <div id="data">
+<form>
 
-        <input type="text" name="name" value="{{name}}" placeholder="name" />
-        <input
+    <div id="bub"><label>name</label><input
+            type="text"
+            name="name"
+            value="{{name}}"
+            placeholder="name"
+        /></div>
+    <div id="bub">
+        <label>surname</label><input
             type="text"
             name="surname"
             value="{{surname}}"
             placeholder="surname"
-        />
-        <input
+        /></div>
+    <div id="bub">
+        <label>age</label><input
             type="text"
             name="age"
             value="{{age}}"
             placeholder="age"
             id="age"
-        />
-        <input type="text" name="city" value="{{city}}" placeholder="city" />
-        <input
-            type="text"
-            name="country"
-            value="{{country}}"
-            placeholder="country"
-        />
-        <input
+        /></div><div id="bub">
+        <label>website</label><input
             type="text"
             name="website"
             value="{{website}}"
             placeholder="website"
-        />
-        <input
+        /></div><div id="bub">
+        <label>city</label><input
+            type="text"
+            name="city"
+            value="{{city}}"
+            placeholder="city"
+        /></div>
+    <div id="bub">
+        <label>country</label><input
+            type="text"
+            name="country"
+            value="{{country}}"
+            placeholder="country"
+        /></div><div id="bub">
+        <label>email</label><input
             type="email"
             name="email"
             value="{{email}}"
             placeholder="email"
-        />
-        <input type="password" name="password" placeholder="password" />
-
-    </div>
-    <button type="submit">submit</button>
+        /></div><div id="bub">
+        <label>password</label><input
+            type="password"
+            name="password"
+            placeholder="password"
+        /></div>
+    <div id="bub">
+        <button type="submit" style="margin: auto auto;">submit</button></div>
 
 </form>
