--- a/views/thanks.handlebars
+++ b/views/thanks.handlebars
@@ -2,10 +2,11 @@
 <img src="{{signature}}" />
 <p>A total of
     {{number}}
-    people have signed this petition alreayd, click
-    <a href="./signers">here</a>
+    people have signed this petition already<br />
+    click
+    <a href="./signers">HERE</a>
     to view the full list</p>
-
+{{#names}}<div id="names" style="visibility: hidden;">{{name}}</div>{{/names}}
 <div class="bubble"></div>
 <div class="bubble"></div>
 <div class="bubble"></div>
