--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -1,6 +1,6 @@
 <h1>Update your personal informations</h1>
 
-<form>
+<form method="post">
 
     <div id="bub"><label>name</label><input
             type="text"
@@ -54,6 +54,6 @@
             placeholder="password"
         /></div>
     <div id="bub">
-        <button type="submit" style="margin: auto auto;">submit</button></div>
+        <button type="submit" style="margin: auto auto;">update</button></div>
 
 </form>
