--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -11,8 +11,16 @@
 
         <div class="buttons">
             <button type="submit">log in</button>
+            <a href="/register"><button type="null">sign in</a></button>
+    
+            </div>
 
     </form>
+   
+    
+                
+            
+    
     {{#if exists}}<div id="exists"><p>
                 ops! wrong username or password</div>{{/if}}
 </div>
