--- a/views/sign.handlebars
+++ b/views/sign.handlebars
@@ -1,9 +1,7 @@
-<div class="title"><h1 class="header">sign</h1></div>
+<div class="title" style="margin: 40px;"><h1 class="header">sign</h1></div>
 <form method="POST" style="justify-content:space-around">
 
-    <label>sign</label>
     <canvas width="320" height="200"></canvas>
     <input name="signature" id="signature" style="display:none" />
-    <button type="submit">sign</button>
-
+    <button type="submit" id="sign">submit</button>
 </form>
